293521@main broke internal builds https://bugs.webkit.org/show_bug.cgi?id=291381 rdar://148999471

Unreviewed build fix. Rename HAVE(WRITING_TOOLS) to
HAVE(WRITING_TOOLS_FRAMEWORK) in some places the first fix missed.

* Source/WebKit/WebKitSwift/WritingTools/WKIntelligenceReplacementTextEffectCoordinator.h:
* Source/WebKit/WebKitSwift/WritingTools/WKIntelligenceSmartReplyTextEffectCoordinator.h:

Canonical link: https://commits.webkit.org/293542@main